# ipb_auto_logbook

./: .gitignore  README.md  data.csv  gui_app.py  ipb_auto_logbook.spec  main.py  pyi_rth_playwright.py  pyproject.toml  requirements.txt  todo.py
.github/workflows/: build-windows.yml  build.yml
extension/: content.js  popup.html
files/: example_file.txt
src/: __init__.py  automator.py
src/chrome-extension/: content.js  manifest.json  popup.html  popup.js
src/gui/: __init__.py  _about_mixin.py  _config_mixin.py  _constants.py  _data_mixin.py  _run_mixin.py  _widgets.py
