[project]
name = "ipb-auto-logbook"
version = "0.1.0"
description = "Automated logbook filler for the IPB University student portal."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright==1.57.0",
    "pyqt6==6.11.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
]
